Fix spacing between paragraphs in the home page

--- a/app/pages/home/HomePage.scss
+++ b/app/pages/home/HomePage.scss
@@ -28,6 +28,9 @@
 .HomePage-section {
   width: 100%;
   background-image: linear-gradient(-180deg, #F9F9F9 0%, #F5F5F5 98%);
+  p:last-child {
+    margin-bottom: $vertical-spacing;
+  }
 }
 
 .HomePage-sectionContent {
